perf: 优化代码，适配jdk17特性